--- a/Home-Index.html
+++ b/Home-Index.html
@@ -201,27 +201,27 @@
                 <form class="form-group">
                     <div class="row">
                         <i class="icon-ic-user3"></i>
-                        <input class="input" type="text" name="" id="" placeholder="请输入姓名...">
+                        <input class="input" type="text" name="" placeholder="请输入姓名...">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <i class="icon-ic-user3"></i>
-                        <input class="input" type="text" name="" id="" placeholder="帐号必须由4-9位数字或小写英文字母组合">
+                        <input class="input" type="text" name="" placeholder="帐号必须由4-9位数字或小写英文字母组合">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <i class="icon-ic-lock1"></i>
-                        <input class="input" type="password" name="" id="" placeholder="密码必须由8至10个字符之间">
+                        <input class="input" type="password" name="" placeholder="密码必须由8至10个字符之间">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <i class="icon-ic-shield"></i>
-                        <input class="input" type="text" name="" id="" placeholder="请输入验证码">
+                        <input class="input" type="text" name="" placeholder="请输入验证码">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="form-action">
                         <input class="btn btn-bg-blue" type="button" value="注册">
-                        <input type="checkbox" name="" id="" checked>
+                        <input type="checkbox" name="" checked>
                         <span>我已经阅读并同意乐鼎國際</span>
                         <a href="">《客户协议》</a>
                     </div>
@@ -234,11 +234,11 @@
                     <p class="warning-text">请填写您的电话与问题并送出，后续将会有专人客服与您联系。</p>
                     <div class="row">
                         <p class="title">手机号码</p>
-                        <input class="input" type="text" name="phone-num" id="" placeholder="请输入电话号码">
+                        <input class="input" type="text" name="phone-num" placeholder="请输入电话号码">
                     </div>
                     <div class="row">
                         <p class="title">讯息</p>
-                        <textarea class="textarea" name="message" id="" cols="30" rows="6"></textarea>
+                        <textarea class="textarea" name="message" cols="30" rows="6"></textarea>
                     </div>
                     <div class="form-action">
                         <input class="btn btn-bg-blue ajax-btn-pcb" type="button" value="确认发送">
@@ -259,12 +259,12 @@
                     </div>
                     <div class="row">
                         <p class="title">收件人</p>
-                        <input class="input" type="password" name="" id="" placeholder="请输入收件人资讯">
+                        <input class="input" type="password" name="" placeholder="请输入收件人资讯">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <p class="title">讯息</p>
-                        <textarea class="textarea" name="" id="" cols="30" rows="6"></textarea>
+                        <textarea class="textarea" name="" cols="30" rows="6"></textarea>
                     </div>
                     <div class="form-action">
                         <input class="btn btn-bg-blue" type="button" value="确认发送">
@@ -297,40 +297,31 @@
                 <form class="form-group">
                     <div class="row">
                         <p class="title">帐户名称</p>
-                        <input class="input" type="password" name="" id="" placeholder="请输入帐户名称">
+                        <input class="input" type="text" name="account_name" placeholder="请输入帐户名称">
                     </div>
                     <div class="row">
                         <p class="title">银行帐号</p>
-                        <input class="input" type="password" name="" id="" placeholder="请输入银行帐号">
+                        <input class="input" type="text" name="account" placeholder="请输入银行帐号">
                     </div>
                     <div class="row">
                         <p class="title">确认银行帐号</p>
-                        <input class="input" type="password" name="" id="" placeholder="请再次输入银行帐号">
+                        <input class="input" type="text" name="account_check" placeholder="请再次输入银行帐号">
                     </div>
                     <div class="row">
-                        <p class="title">银行卡类型</p>
-                        <select class="select" name="" id="">
-                            <option value="">选项A</option>
-                            <option value="">选项B</option>
-                            <option value="">选项C</option>
-                        </select>
+                        <p class="title">分行名称</p>
+                        <input class="input" type="text" name="branch_name" placeholder="请输入分行名称">
                     </div>
                     <div class="row clear">
                         <p class="title">开户所在地</p>
                         <div class="col-xs-6" style="padding-left: 0;">
-                            <select class="select" name="" id="">
-                                <option value="">选择县市</option>
-                            </select>
+                            <select class="select" id="province" name="P1"></select>
                         </div>
                         <div class="col-xs-6" style="padding-right: 0;">
-                            <select class="select" name="" id="">
-                                <option value="">选择行政区</option>
-                            </select>
+                            <select class="select" id="city" name="C1"></select>
                         </div>
-                        <input class="input" type="password" name="" id="" placeholder="请输入地址" style="margin-top: 20px;">
                     </div>
                     <div class="form-action">
-                        <input class="btn btn-bg-blue" type="button" value="确认新增">
+                        <input class="btn btn-bg-blue ajax-btn-bankcard" type="button" value="确认新增">
                     </div>
                 </form>
             </div>
@@ -345,24 +336,17 @@
             Live.Global.owl_banner();
         </script>
         <script>
-            // 設置cookie開始
+            // Public
+            var _phone_key
+
             function setCookie(_sess) {
                 sessionStorage.session = _sess;
             }
-            // 設置cookie結束
 
-            // 清除cookie開始
             function clearCookie() {
                 sessionStorage.session = '';
             }
-            // 清除cookie結束
 
-            // 讀取cookie開始
-            console.log(sessionStorage.session)
-            // 讀取cookie結束
-
-            // 判斷手機號開始
-            var _phone_key
             function checkPhone(namber) {
                 var phone = namber
                 if (!(/^1[34578]\d{9}$/.test(phone))) {
@@ -373,7 +357,6 @@
                     _phone_key = true;
                 }
             }
-            // 判斷手機號結束
 
             function userInformation() {
                 $.ajax({
@@ -401,7 +384,6 @@
                     userInformation()
                 }
             });
-
             $('.ajax-btn-login').click(function () {
                 var _parent = $(this).parents('.ajax-login-form');
                 var _account = _parent.find('[name=account]').val();
@@ -429,7 +411,6 @@
                     }
                 });
             });
-
             $('.ajax-btn-logout').click(function () {
                 $.ajax({
                     url: "http://ldyllive.com/api/Api/logout",
@@ -449,7 +430,6 @@
                     }
                 });
             });
-
             $('.ajax-btn-pcb').click(function () {
                 var _pcb_phone = $('.jq-pop-service').find('[name=phone-num]').val();
                 var _pcb_message = $('.jq-pop-service').find('[name=message]').val();
