--- a/Live-Notice.html
+++ b/Live-Notice.html
@@ -87,89 +87,8 @@
             </div>
         </header>
         <main>
-            <section class="sect-notice">
-                <div class="container" action="">
-                    <div class="row">
-                        <div class="notice-group jq-notice-group">
-                            <p class="title">
-                                <i class="icon-ic-broadcast1"></i>
-                                <span>2018-01-01 18:35:41</span>
-                            </p>
-                            <p class="detail jq-detail">
-                                尊贵的会员，这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息…
-                            </p>
-                            <div class="notice-action">
-                                <a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="notice-group jq-notice-group">
-                            <p class="title">
-                                <i class="icon-ic-broadcast1"></i>
-                                <span>2018-01-01 18:35:41</span>
-                            </p>
-                            <p class="detail jq-detail">
-                                尊贵的会员，这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息…
-                            </p>
-                            <div class="notice-action">
-                                <a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="notice-group jq-notice-group">
-                            <p class="title">
-                                <i class="icon-ic-broadcast1"></i>
-                                <span>2018-01-01 18:35:41</span>
-                            </p>
-                            <p class="detail jq-detail">
-                                尊贵的会员，这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息…
-                            </p>
-                            <div class="notice-action">
-                                <a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="notice-group jq-notice-group">
-                            <p class="title">
-                                <i class="icon-ic-broadcast1"></i>
-                                <span>2018-01-01 18:35:41</span>
-                            </p>
-                            <p class="detail jq-detail">
-                                尊贵的会员，这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息…
-                            </p>
-                            <div class="notice-action">
-                                <a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="notice-group jq-notice-group">
-                            <p class="title">
-                                <i class="icon-ic-broadcast1"></i>
-                                <span>2018-01-01 18:35:41</span>
-                            </p>
-                            <p class="detail jq-detail">
-                                尊贵的会员，这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息
-                                这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息这是站内讯息这是站内讯息 这是站内讯息这是站内讯息…
-                            </p>
-                            <div class="notice-action">
-                                <a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <section class="sect-notice jq-sect-notice">
+                <div class="container"></div>
             </section>
         </main>
         <footer>
@@ -237,27 +156,27 @@
                 <form class="form-group">
                     <div class="row">
                         <i class="icon-ic-user3"></i>
-                        <input class="input" type="text" name="" id="" placeholder="请输入姓名...">
+                        <input class="input" type="text" name="" placeholder="请输入姓名...">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <i class="icon-ic-user3"></i>
-                        <input class="input" type="text" name="" id="" placeholder="帐号必须由4-9位数字或小写英文字母组合">
+                        <input class="input" type="text" name="" placeholder="帐号必须由4-9位数字或小写英文字母组合">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <i class="icon-ic-lock1"></i>
-                        <input class="input" type="password" name="" id="" placeholder="密码必须由8至10个字符之间">
+                        <input class="input" type="password" name="" placeholder="密码必须由8至10个字符之间">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <i class="icon-ic-shield"></i>
-                        <input class="input" type="text" name="" id="" placeholder="请输入验证码">
+                        <input class="input" type="text" name="" placeholder="请输入验证码">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="form-action">
                         <input class="btn btn-bg-blue" type="button" value="注册">
-                        <input type="checkbox" name="" id="" checked>
+                        <input type="checkbox" name="" checked>
                         <span>我已经阅读并同意乐鼎國際</span>
                         <a href="">《客户协议》</a>
                     </div>
@@ -270,11 +189,11 @@
                     <p class="warning-text">请填写您的电话与问题并送出，后续将会有专人客服与您联系。</p>
                     <div class="row">
                         <p class="title">手机号码</p>
-                        <input class="input" type="text" name="phone-num" id="" placeholder="请输入电话号码">
+                        <input class="input" type="text" name="phone-num" placeholder="请输入电话号码">
                     </div>
                     <div class="row">
                         <p class="title">讯息</p>
-                        <textarea class="textarea" name="message" id="" cols="30" rows="6"></textarea>
+                        <textarea class="textarea" name="message" cols="30" rows="6"></textarea>
                     </div>
                     <div class="form-action">
                         <input class="btn btn-bg-blue ajax-btn-pcb" type="button" value="确认发送">
@@ -295,12 +214,12 @@
                     </div>
                     <div class="row">
                         <p class="title">收件人</p>
-                        <input class="input" type="password" name="" id="" placeholder="请输入收件人资讯">
+                        <input class="input" type="password" name="" placeholder="请输入收件人资讯">
                         <p class="warning-text">警示文字警示文字警示文字</p>
                     </div>
                     <div class="row">
                         <p class="title">讯息</p>
-                        <textarea class="textarea" name="" id="" cols="30" rows="6"></textarea>
+                        <textarea class="textarea" name="" cols="30" rows="6"></textarea>
                     </div>
                     <div class="form-action">
                         <input class="btn btn-bg-blue" type="button" value="确认发送">
@@ -333,40 +252,31 @@
                 <form class="form-group">
                     <div class="row">
                         <p class="title">帐户名称</p>
-                        <input class="input" type="password" name="" id="" placeholder="请输入帐户名称">
+                        <input class="input" type="text" name="account_name" placeholder="请输入帐户名称">
                     </div>
                     <div class="row">
                         <p class="title">银行帐号</p>
-                        <input class="input" type="password" name="" id="" placeholder="请输入银行帐号">
+                        <input class="input" type="text" name="account" placeholder="请输入银行帐号">
                     </div>
                     <div class="row">
                         <p class="title">确认银行帐号</p>
-                        <input class="input" type="password" name="" id="" placeholder="请再次输入银行帐号">
+                        <input class="input" type="text" name="account_check" placeholder="请再次输入银行帐号">
                     </div>
                     <div class="row">
-                        <p class="title">银行卡类型</p>
-                        <select class="select" name="" id="">
-                            <option value="">选项A</option>
-                            <option value="">选项B</option>
-                            <option value="">选项C</option>
-                        </select>
+                        <p class="title">分行名称</p>
+                        <input class="input" type="text" name="branch_name" placeholder="请输入分行名称">
                     </div>
                     <div class="row clear">
                         <p class="title">开户所在地</p>
                         <div class="col-xs-6" style="padding-left: 0;">
-                            <select class="select" name="" id="">
-                                <option value="">选择县市</option>
-                            </select>
+                            <select class="select" id="province" name="P1"></select>
                         </div>
                         <div class="col-xs-6" style="padding-right: 0;">
-                            <select class="select" name="" id="">
-                                <option value="">选择行政区</option>
-                            </select>
+                            <select class="select" id="city" name="C1"></select>
                         </div>
-                        <input class="input" type="password" name="" id="" placeholder="请输入地址" style="margin-top: 20px;">
                     </div>
                     <div class="form-action">
-                        <input class="btn btn-bg-blue" type="button" value="确认新增">
+                        <input class="btn btn-bg-blue ajax-btn-bankcard" type="button" value="确认新增">
                     </div>
                 </form>
             </div>
@@ -383,15 +293,17 @@
             Live.Global.datepicker();
         </script>
         <script>
-
             // Public
             var _phone_key
+
             function setCookie(_sess) {
                 sessionStorage.session = _sess;
             }
+
             function clearCookie() {
                 sessionStorage.session = '';
             }
+
             function checkPhone(namber) {
                 var phone = namber
                 if (!(/^1[34578]\d{9}$/.test(phone))) {
@@ -402,6 +314,7 @@
                     _phone_key = true;
                 }
             }
+
             function userInformation() {
                 $.ajax({
                     url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
@@ -503,24 +416,41 @@
             // Privity
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?sess=" + sessionStorage.session + "&p=1&limit=5",
+                    url: "http://ldyllive.com/api/Api/getAnnouncemetList?sess=" + sessionStorage.session +
+                        "&p=1&limit=5",
                     type: "GET",
                     success: function (data) {
-                        console.log(data.body.list);
-                        console.log(data.body.list.length);
-                        // if (data.status) {
-                        //     switch (data.status) {
-                        //         case 100:
-                        //             $('.jq-login-before').hide();
-                        //             $('.jq-login-after').show();
-                        //             $('.jq-member-nam').text(data.body.user.u_name)
-                        //             break;
-                        //     }
-                        // }
+                        var _each = $(".jq-sect-notice").find('.container');
+                        var _length = data.body.list.length;
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    for (i = 0; i < _length; i++) {
+                                        _each.append(
+                                            '<div class="row">' +
+                                            '<div class="notice-group jq-notice-group">' +
+                                            '<p class="title">' +
+                                            '<i class="icon-ic-broadcast1"></i>' +
+                                            '<span style="display: inline-block; margin-right: 20px;">' +
+                                            data.body.list[i].an_title + '</span>' +
+                                            '<span>' + data.body.list[i].an_datetime +
+                                            '</span>' +
+                                            '</p>' +
+                                            '<p class="detail jq-detail">' + data.body.list[i].an_content +
+                                            '</p>' +
+                                            '<div class="notice-action">' +
+                                            '<a class="jq-btn-notice-more" href="javascript:void(0)">更多内容 ></a>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>'
+                                        )
+                                    }
+                                    break;
+                            }
+                        }
                     }
                 });
             });
-
         </script>
     </div>
 </body>
