--- a/Member-Password.html
+++ b/Member-Password.html
@@ -136,78 +136,78 @@
                     </ul>
                     <div class="member-detail">
                         <div class="member-detail-tag clear">
-                            <a href="javascript:void(0)" class="col-xs-6 jq-member-tag active">登入密码变更</a>
-                            <a href="javascript:void(0)" class="col-xs-6 jq-member-tag">资金密码变更</a>
+                            <a href="javascript:void(0)" class="col-xs-6 jq-member-tag active" data-password="user">登入密码变更</a>
+                            <a href="javascript:void(0)" class="col-xs-6 jq-member-tag" data-password="cash">资金密码变更</a>
                         </div>
-                        <form class="container" action="">
+                        <div class="container jq-user-password">
                             <div class="row">
                                 <div class="input-group-container clear">
                                     <p class="title">请输入旧密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="请输入旧密码">
+                                        <input type="password" name="userpasswd" placeholder="请输入旧密码">
                                     </div>
                                 </div>
                                 <div class="input-group-container clear">
                                     <p class="title">请输入新密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="请输入新密码">
+                                        <input type="password" name="new-userpasswd" placeholder="请输入新密码">
                                     </div>
                                 </div>
                                 <div class="input-group-container clear">
                                     <p class="title">再次输入新密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="再次输入新密码">
+                                        <input type="password" name="new-userpasswd-check" placeholder="再次输入新密码">
                                     </div>
                                 </div>
                             </div>
                             <div class="row btn-action">
-                                <input class="btn btn-bg-blue" type="button" value="确认变更">
+                                <input class="btn btn-bg-blue ajax-btn-userpassword" type="button" value="确认变更">
                             </div>
-                        </form>
-                        <form class="container" action="">
+                        </div>
+                        <div class="container jq-user-cashpassword-first" style="display: none;">
                             <div class="row">
                                 <div class="input-group-container clear">
                                     <p class="title">请输入新密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="请输入新密码">
+                                        <input type="password" name="cashpasswd" placeholder="请输入新密码">
                                     </div>
                                 </div>
                                 <div class="input-group-container clear">
                                     <p class="title">再次输入新密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="再次输入新密码">
+                                        <input type="password" name="cashpasswd-check" placeholder="再次输入新密码">
                                     </div>
                                 </div>
                             </div>
                             <div class="row btn-action">
-                                <input class="btn btn-bg-blue" type="button" value="设定密码">
+                                <input class="btn btn-bg-blue ajax-btn-cashpassword-first" type="button" value="设定密码">
                             </div>
-                        </form>
-                        <form class="container" action="">
+                        </div>
+                        <div class="container jq-user-cashpassword" style="display: none;">
                             <div class="row">
                                 <div class="input-group-container clear">
                                     <p class="title">请输入旧密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="请输入旧密码">
+                                        <input type="password" name="cashpasswd" placeholder="请输入旧密码">
                                     </div>
                                 </div>
                                 <div class="input-group-container clear">
                                     <p class="title">请输入新密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="请输入新密码">
+                                        <input type="password" name="new-cashpasswd" placeholder="请输入新密码">
                                     </div>
                                 </div>
                                 <div class="input-group-container clear">
                                     <p class="title">再次输入新密码</p>
                                     <div class="input-group">
-                                        <input type="password" placeholder="再次输入新密码">
+                                        <input type="password" name="new-cashpasswd-check" placeholder="再次输入新密码">
                                     </div>
                                 </div>
                             </div>
                             <div class="row btn-action">
-                                <input class="btn btn-bg-blue" type="button" value="确认变更">
+                                <input class="btn btn-bg-blue ajax-btn-cashpassword" type="button" value="确认变更">
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -410,6 +410,230 @@
             Live.Global.intital();
             Live.Global.member();
             Live.Global.owl_banner();
+        </script>
+        <script>
+            // Public
+            var _phone_key
+            function setCookie(_sess) {
+                sessionStorage.session = _sess;
+            }
+            function clearCookie() {
+                sessionStorage.session = '';
+            }
+            function checkPhone(namber) {
+                var phone = namber
+                if (!(/^1[34578]\d{9}$/.test(phone))) {
+                    alert("手机号码有误，请重填");
+                    _phone_key = false;
+                    return false;
+                } else {
+                    _phone_key = true;
+                }
+            }
+            function userInformation() {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
+                    type: "GET",
+                    success: function (data) {
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    $('.jq-login-before').hide();
+                                    $('.jq-login-after').show();
+                                    $('.jq-member-nam').text(data.body.user.u_name)
+                                    break;
+                            }
+                        }
+                    }
+                });
+            }
+
+            $(window).load(function () {
+                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                    $('.jq-login-before').show();
+                    $('.jq-login-after').hide();
+                } else {
+                    userInformation()
+                }
+            });
+            $('.ajax-btn-login').click(function () {
+                var _parent = $(this).parents('.ajax-login-form');
+                var _account = _parent.find('[name=account]').val();
+                var _passwd = _parent.find('[name=passwd]').val();
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/login",
+                    type: "POST",
+                    data: JSON.stringify({
+                        account: _account,
+                        passwd: _passwd
+                    }),
+                    success: function (data) {
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    setCookie(data.body.sess);
+                                    console.log(data.body.sess);
+                                    alert('登入成功');
+                                    userInformation()
+                                    break;
+                                case '999':
+                                    alert('帐号或密码错误');
+                            }
+                        }
+                    }
+                });
+            });
+            $('.ajax-btn-logout').click(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/logout",
+                    type: "GET",
+                    success: function (data) {
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    clearCookie();
+                                    alert('登出成功');
+                                    $('.jq-login-before').show();
+                                    $('.jq-login-after').hide();
+                                    $('.jq-member-nam').empty()
+                                    break;
+                            }
+                        }
+                    }
+                });
+            });
+            $('.ajax-btn-pcb').click(function () {
+                var _pcb_phone = $('.jq-pop-service').find('[name=phone-num]').val();
+                var _pcb_message = $('.jq-pop-service').find('[name=message]').val();
+                checkPhone(_pcb_phone);
+                if (_phone_key == true) {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
+                        type: "POST",
+                        data: JSON.stringify({
+                            pcb_phone: _pcb_phone,
+                            pcb_message: _pcb_message
+                        }),
+                        success: function (data) {
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        alert('问题已送出，后续将会有专人客服与您联系。');
+                                        window.location.reload();
+                                        break;
+                                }
+                            }
+                        }
+                    });
+                }
+            });
+
+            // Privity
+            $('[data-password=cash]').click(function () {
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    type: "GET",
+                    success: function (data) {
+                        var _key = data.body.isSet;
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    if (_key == 0) {
+                                        $('.jq-user-cashpassword').hide();
+                                        $('.jq-user-cashpassword-first').show();
+                                    } else if (_key == 1) {
+                                        $('.jq-user-cashpassword').show();
+                                        $('.jq-user-cashpassword-first').hide();
+                                    }
+                                    break;
+                            }
+                        }
+                    }
+                });
+            });
+            $('.ajax-btn-userpassword').click(function () {
+                var _passwd = $('.jq-user-password').find('[name=userpasswd]').val();
+                var _new_passwd = $('.jq-user-password').find('[name=new-userpasswd]').val();
+                var _check_passwd = $('.jq-user-password').find('[name=new-userpasswd-check]').val();
+                if (_new_passwd == _check_passwd) {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/setUserPassword?sess=" + sessionStorage.session,
+                        type: "POST",
+                        data: JSON.stringify({
+                            passwd: _passwd,
+                            oldpasswd: _new_passwd
+                        }),
+                        success: function (data) {
+                            var _key = data.body.isSet;
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        alert('修改成功，下次请使用新密码登入');
+                                    case '999':
+                                        alert(data.message);
+                                }
+                            }
+                        }
+                    });
+                } else {
+                    alert('密码输入不一致，请重新输入');
+                }
+            });
+            $('.ajax-btn-cashpassword-first').click(function () {
+                var _passwd = $('.jq-user-cashpassword-first').find('[name=cashpasswd]').val();
+                var _check_passwd = $('.jq-user-cashpassword-first').find('[name=cashpasswd-check]').val();
+                if (_passwd == _check_passwd) {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        type: "POST",
+                        data: JSON.stringify({
+                            passwd: _passwd
+                        }),
+                        success: function (data) {
+                            var _key = data.body.isSet;
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        alert('资金密码设定完成');
+                                    case '999':
+                                        alert(data.message);
+                                }
+                            }
+                        }
+                    });
+                } else {
+                    alert('密码输入不一致，请重新输入');
+                }
+            });
+            $('.ajax-btn-cashpassword').click(function () {
+                var _passwd = $('.jq-user-cashpassword').find('[name=cashpasswd]').val();
+                var _new_passwd = $('.jq-user-cashpassword').find('[name=new-cashpasswd]').val();
+                var _check_passwd = $('.jq-user-cashpassword').find('[name=new-cashpasswd-check]').val();
+                if (_new_passwd == _check_passwd) {
+                    $.ajax({
+                        url: "http://ldyllive.com/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        type: "POST",
+                        data: JSON.stringify({
+                            passwd: _passwd,
+                            oldpasswd: _new_passwd
+                        }),
+                        success: function (data) {
+                            var _key = data.body.isSet;
+                            if (data.status) {
+                                switch (data.status) {
+                                    case 100:
+                                        alert('资金密码修改成功，下次请使用新密码');
+                                    case '999':
+                                        alert(data.message);
+                                }
+                            }
+                        }
+                    });
+                } else {
+                    alert('密码输入不一致，请重新输入');
+                }
+            });
+
         </script>
     </div>
 </body>
